style.css
body, .toolbar {
    background-color: #c8c8c8;
}

#output {
    background-color: white;
}

.container {
    background-color: #fff;
    padding: 5px;
    border-radius: 5px;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
    text-align: center;
    font-size: 150%;
    margin-left: 20px;
    margin-right: 18px;
}

/* Default style for text (black text on white background) */
.editor {
    margin: 20px;
    background-color: white;
    color: black;
}

textarea {
    width: 98.6%;
    padding: 10px;
    resize: vertical;
}

.toolbar button {
    margin: 5px;
    padding: 5px 10px;
}

#tutorial-button {
    margin: 5px;
    padding: 5px 10px;
}

.output {
    margin: 20px;
    border: 1px solid #ccc;
    padding: 10px;
}

/* Dark Mode Styles */
body.dark-mode {
    background-color: #333;    
}

/* Container Styles for Dark Mode */
body.dark-mode .container {
    background-color: #111; 
}

/* Dark Mode Styles for Text Elements */
body.dark-mode label,
body.dark-mode h2,
body.dark-mode p {
    color: #fff; /* Change text color to white for labels, h1, and p elements */
}
body.dark-mode h2 {
    background-color: #111;
}

#enable-dark-mode {
    background-color: gray;
    color: #fff;
    border: none;
    padding: 10px 15px;
    cursor: pointer;
    margin-top: 20px;
    margin-left: 20px;
}

body.dark-mode #output,
body.dark-mode #text-area {
    background-color: dimgrey;
}

/* Dark mode style (white text on dark background) */
body.dark-mode .editor,
body.dark-mode .toolbar {
    background-color: #333; /* You can choose your preferred dark background color */
    color: white;
}

